tests/invalid/List_Invalid_5.whiley
function f() -> int[]:
    return 1
